--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cute Hack 2020</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="scss/style.scss">
     <script defer src="js/app.js"></script>
 </head>
 <body>
-    
+    <button class="btn btn-primary">asd</button>
 </body>
 </html>
