register person page 1

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <button class="btn btn-primary">asd</button>
     <a href="register.html">Register</a>
+    <a href="register-person-1.html">Register person</a>
 </body>
 </html>
