--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
   <body class="register">
     <div class="container text-center">
       <h1>Register or Log in</h1>
-      <section class="content">
+      <section class="center-vertically">
         <div>
           <i
             data-eva="person"
@@ -32,8 +32,6 @@
       </section>
     </div>
 
-    <!-- <script src="js/eva-icons.js"></script> -->
-    <!-- <script src="dist/eva-icons.js"></script> -->
     <script>
       eva.replace();
     </script>
