added css to intropage

--- a/intropage.html
+++ b/intropage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +9,23 @@
     <script defer src="js/app.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="intro">
-        <button class="btn btn-right">Skip</button>
+        <div><a class="btn btn-right">Skip</a></div>
         <h1 class="intro-h1">Sign up</h1>
-        <p class="intro-text">Start by signing up as either job seeker or business and complete your profile in a matter of minutes</p>
-        <div class="dots">
-            <div class="dot dot-active"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
+        <div class="opacity-bgr">
+            <p class="intro-text">Start by signing up as either job seeker or business and complete your profile in a
+                matter of minutes</p>
+            <div class="dots">
+                <div class="dot dot-active"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+                <div class="dot"></div>
+            </div>
         </div>
+
     </div>
 </body>
+
 </html>
