--- a/intropage.html
+++ b/intropage.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="intro">
-        <div><a class="btn btn-right">Skip</a></div>
+        <a class="btn btn-right">Skip</a>
         <h1 class="intro-h1">Sign up</h1>
         <div class="opacity-bgr">
             <p class="intro-text">Start by signing up as either job seeker or business and complete your profile in a
