renames css file

--- a/intropage.html
+++ b/intropage.html
@@ -7,12 +7,12 @@
     <title>Cute Hack 2020</title>
     <link rel="stylesheet" href="scss/style.scss">
     <script defer src="js/app.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/intropage.css">
 </head>
 
 <body>
     <div class="intro">
-        <a class="btn btn-right">Skip</a>
+        <a class="btn btn-right" href="">Skip</a>
         <h1 class="intro-h1">Sign up</h1>
         <div class="opacity-bgr">
             <p class="intro-text">Start by signing up as either job seeker or business and complete your profile in a
