created last intropage

--- a/intropage.html
+++ b/intropage.html
@@ -18,10 +18,10 @@
             <p class="intro-text">Start by signing up as either job seeker or business and complete your profile in a
                 matter of minutes</p>
             <div class="dots">
-                <div class="dot dot-active"></div>
-                <div class="dot"></div>
-                <div class="dot"></div>
-                <div class="dot"></div>
+                <a href=""><div class="dot dot-active"></div></a>
+                <a href=""><div class="dot"></div></a>
+                <a href=""><div class="dot"></div></a>
+                <a href=""><div class="dot"></div></a>
             </div>
         </div>
 
