finish employee tinder screen

--- a/employee-tinder.html
+++ b/employee-tinder.html
@@ -33,6 +33,12 @@
                     <span class="badge badge-success">React</span>
                     <span class="badge badge-success">Nodejs</span>
                 </p>
+                <div>
+                    <div class="alert alert-custom">
+                    <p class="font-weight-bolder">About Adam</p>
+                        Adam is the coolest guy!
+                    </div>
+                </div>
             </div>
         </main>
     </div>
