--- a/intropage.html
+++ b/intropage.html
@@ -14,17 +14,15 @@
     <div class="intro">
         <a class="btn btn-right" href="">Skip</a>
         <h1 class="intro-h1">Sign up</h1>
-        <div class="opacity-bgr">
-            <p class="intro-text">Start by signing up as either job seeker or business and complete your profile in a
-                matter of minutes</p>
-            <div class="dots">
-                <a href=""><div class="dot dot-active"></div></a>
-                <a href=""><div class="dot"></div></a>
-                <a href=""><div class="dot"></div></a>
-                <a href=""><div class="dot"></div></a>
-            </div>
+        <div class="opacity-bgr opacity-bgr-long">
+            <p class="intro-text">Start by signing up as either job seeker or business and complete your profile in a matter of minutes</p>
         </div>
-
+    </div>
+    <div class="dots">
+        <a href="./intropage.html"><div class="dot dot-active"></div></a>
+        <a href="./intropage2.html"><div class="dot"></div></a>
+        <a href="./intropage3.html"><div class="dot"></div></a>
+        <a href=""><div class="dot"></div></a>
     </div>
 </body>
 
