--- a/intropage3.html
+++ b/intropage3.html
@@ -13,17 +13,16 @@
 <body>
     <div class="intro">
         <a class="btn btn-right" href="">Skip</a>
-        <h1 class="intro-h1 intro-h1-small">Meet a match</h1>
+        <h1 class="intro-h1 intro-h1-small">Agree on employment</h1>
         <div class="opacity-bgr">
-            <p class="intro-text">Swipe right and left until you find a job or job seeker that matches your search, and get to know each other using the chat or video call</p>
-            <div class="dots">
-                <a href=""><div class="dot"></div></a>
-                <a href=""><div class="dot dot-active"></div></a>
-                <a href=""><div class="dot"></div></a>
-                <a href=""><div class="dot"></div></a>
-            </div>
+            <p class="intro-text">Upload and sign the contract within the app</p>
         </div>
-
+    </div>
+    <div class="dots">
+        <a href="./intropage.html"><div class="dot"></div></a>
+        <a href="./intropage2.html"><div class="dot"></div></a>
+        <a href="./intropage3.html"><div class="dot dot-active"></div></a>
+        <a href=""><div class="dot"></div></a>
     </div>
 </body>
 
