--- a/register-person-1.html
+++ b/register-person-1.html
@@ -23,11 +23,13 @@
                 ></i>
               </div>
             </div>
-            <div class="form-group col-8">
-              <button type="button" class="btn btn-info btn-block">
-                Upload a selfie
-                <i data-eva="arrow-upward" data-eva-fill="#fff"></i>
-              </button>
+            <div class="form-group col-8 center-wrapper">
+              <div class="center-vertically">
+                <button type="button" class="btn btn-info btn-block">
+                  Upload a selfie
+                  <i data-eva="arrow-upward" data-eva-fill="#fff"></i>
+                </button>
+              </div>
             </div>
           </div>
           <div class="form-group">
@@ -40,7 +42,6 @@
           </div>
           <label for="birth-date">Birth date</label>
           <div class="form-row" id="birth-date">
-            <!-- <div id="birth-date"> -->
             <div class="form-group col-4">
               <input
                 type="number"
@@ -71,11 +72,11 @@
             <input type="text" class="form-control" id="position" />
           </div>
           <div class="form-group">
-              <label for="employment-form">Form of employment</label>
-              <select class="form-control" id="employment-form">
-                <option>Part time</option>
-                <option>Full time</option>
-              </select>
+            <label for="employment-form">Form of employment</label>
+            <select class="form-control" id="employment-form">
+              <option>Part time</option>
+              <option>Full time</option>
+            </select>
           </div>
           <div class="form-group">
             <label for="employer">Latest employer</label>
