--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
   <body class="register">
     <div class="container text-center">
       <h1>Register or Log in</h1>
-      <section class="center-vertically">
+      <section class="center-totally">
         <div>
           <i
             data-eva="person"
