added css to login

--- a/intropage2.html
+++ b/intropage2.html
@@ -22,7 +22,7 @@
         <a href="./intropage.html"><div class="dot"></div></a>
         <a href="./intropage2.html"><div class="dot dot-active"></div></a>
         <a href="./intropage3.html"><div class="dot"></div></a>
-        <a href=""><div class="dot"></div></a>
+        <a href="./login.html"><div class="dot"></div></a>
     </div>
 </body>
 
