--- a/login.html
+++ b/login.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cute Hack 2020</title>
-    <link rel="stylesheet" href="scss/style.scss" />
-    <script defer src="js/app.js"></script>
-    <script src="https://unpkg.com/eva-icons"></script>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cute Hack 2020</title>
+  <link rel="stylesheet" href="scss/style.scss" />
+  <link rel="stylesheet" href="css/intropage.css" />
+  <script defer src="js/app.js"></script>
+  <script src="https://unpkg.com/eva-icons"></script>
+</head>
+
+<body>
+  <div class="intro-2">
     <nav class="navbar navbar-light bg-light">
       <div class="navbar-brand"></div>
       <a class="navbar-brand" href="#"><i data-eva="funnel-outline"></i></a>
@@ -31,8 +35,25 @@
         </a>
       </div>
     </div>
-  </body>
-  <script>
-    eva.replace();
-  </script>
+  </div>
+  <div class="dots">
+    <a href="./intropage.html">
+      <div class="dot"></div>
+    </a>
+    <a href="./intropage2.html">
+      <div class="dot"></div>
+    </a>
+    <a href="./intropage3.html">
+      <div class="dot"></div>
+    </a>
+    <a href="./login.html">
+      <div class="dot dot-active"></div>
+    </a>
+  </div>
+
+</body>
+<script>
+  eva.replace();
+</script>
+
 </html>
