added css to login pages

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     </nav>
     <div class="container">
       <div class="heading-container">
-        <h1 class="heading">Login</h1>
+        <h1 class="intro-h1">Login</h1>
       </div>
       <div class="login-div">
         <h2 class="login-header">Choose login</h2>
