--- a/login-business.html
+++ b/login-business.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="scss/style.scss" />
     <script defer src="js/app.js"></script>
     <script src="https://unpkg.com/eva-icons"></script>
+    <link rel="stylesheet" href="css/intropage.css">
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
@@ -17,28 +18,28 @@
     </nav>
     <div class="container">
       <div class="heading-container">
-        <h1 class="heading">Business login</h1>
+        <h1 class="intro-h1 intro-h1-small">Business login</h1>
       </div>
-      <form>
+      <form class="login-form">
         <div class="form-group">
-          <label for="username">Username</label>
+          <label for="username" >Username</label>
           <input
             type="text"
-            class="form-control"
+            class="form-control form-input"
             id="username"
             aria-describedby="usernameHelp"
           />
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" />
+          <input type="password" class="form-control  form-input" id="password" />
         </div>
         <button type="button" class="buttons btn btn-primary btn-lg btn-block">
           Login
         </button>
         <button
           type="button"
-          class="buttons btn btn-secondary btn-lg btn-block"
+          class="buttons btn btn-secondary btn-lg btn-block btn-solid"
         >
           Register
         </button>
