changes to primary color. progress on business registration pages

--- a/register-person-1.html
+++ b/register-person-1.html
@@ -17,7 +17,7 @@
               <div class="icon-wrapper-border">
                 <i
                   data-eva="person"
-                  data-eva-fill="#979797"
+                  data-eva-fill="#444444"
                   data-eva-height="60px"
                   data-eva-width="60px"
                 ></i>
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group col-8 center-wrapper">
               <div class="center-vertically">
-                <button type="button" class="btn btn-primary btn-block">
+                <button type="button" class="btn background-purple btn-block">
                   Upload a selfie
                   <i data-eva="arrow-upward" data-eva-fill="#fff"></i>
                 </button>
@@ -82,7 +82,7 @@
             <label for="employer">Latest employer</label>
             <input type="text" class="form-control" id="employer" />
           </div>
-          <button type="submit" class="btn btn-primary">Next</button>
+          <button type="submit" class="btn background-purple">Next</button>
         </form>
       </section>
     </div>
