--- a/register.html
+++ b/register.html
@@ -14,20 +14,20 @@
         <div>
           <i
             data-eva="person"
-            data-eva-fill="#979797"
+            data-eva-fill="#444444"
             data-eva-height="60px"
             data-eva-width="60px"
           ></i>
-          <button type="button" class="btn btn-primary">Person</button>
+          <button type="button" class="btn background-purple">Person</button>
         </div>
         <div>
           <i
             data-eva="briefcase"
-            data-eva-fill="#979797"
+            data-eva-fill="#444444"
             data-eva-height="60px"
             data-eva-width="60px"
           ></i>
-          <button type="button" class="btn btn-outline-primary">Business</button>
+          <button type="button" class="btn border-purple">Business</button>
         </div>
       </section>
     </div>
