--- a/register-business-1.html
+++ b/register-business-1.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register Person</title>
+    <title>Register Business</title>
     <link rel="stylesheet" href="scss/style.scss" />
     <script src="https://unpkg.com/eva-icons"></script>
   </head>
-  <body class="register person">
+  <body class="register business">
     <div class="container text-center">
       <h1>Register</h1>
       <section class="content">
@@ -25,51 +25,35 @@
             </div>
             <div class="form-group col-8 center-wrapper">
               <div class="center-vertically">
-                <p class="h6">Name Nameson</p>
-                <p class="h6">Frontend Developer</p>
+                <button type="button" class="btn background-purple btn-block">
+                  Upload your logo
+                  <i data-eva="arrow-upward" data-eva-fill="#fff"></i>
+                </button>
               </div>
             </div>
           </div>
           <div class="form-group">
-            <input
-              type="text"
-              class="form-control"
-              id="skills"
-              placeholder="Add skills"
-            />
+            <label for="name">Business name</label>
+            <input type="text" class="form-control" id="name" />
           </div>
           <div class="form-group">
-            <input
-              type="text"
-              class="form-control"
-              id="education"
-              placeholder="Add education"
-            />
+            <label for="reg-number">Registration number</label>
+            <input type="number" class="form-control" id="reg-number" />
           </div>
           <div class="form-group">
-            <input
-              type="text"
-              class="form-control"
-              id="work-experience"
-              placeholder="Add work experience"
-            />
+            <label for="established">Established</label>
+            <input type="number" class="form-control" id="established" />
           </div>
           <div class="form-group">
-            <input
-              type="text"
-              class="form-control"
-              id="courses"
-              placeholder="Add courses"
-            />
+            <label for="number-of-employees">Number of employees</label>
+            <input type="number" class="form-control" id="number-of-employees" />
           </div>
-          <div class="row">
-            <div class="col">
-              <button type="button" class="btn background-purple btn-block">Back</button>
-            </div>
-            <div class="col">
-              <button type="submit" class="btn background-purple btn-block">View profile</button>
-            </div>
+          <div class="form-group">
+            <label for="location">Location</label>
+            <input type="text" class="form-control" id="location">
           </div>
+          
+          <button type="submit" class="btn background-purple">Next</button>
         </form>
       </section>
     </div>
