--- a/register-business-2.html
+++ b/register-business-2.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register Person</title>
+    <title>Register Business</title>
     <link rel="stylesheet" href="scss/style.scss" />
     <script src="https://unpkg.com/eva-icons"></script>
   </head>
-  <body class="register person">
+  <body class="register business">
     <div class="container text-center">
       <h1>Register</h1>
       <section class="content">
@@ -25,41 +25,34 @@
             </div>
             <div class="form-group col-8 center-wrapper">
               <div class="center-vertically">
-                <p class="h6">Name Nameson</p>
-                <p class="h6">Frontend Developer</p>
+                <p class="h6">Business name</p>
+                <p class="h6"> <i data-eva="paper-plane" data-eva-fill="#444444"></i> Oslo</p>
               </div>
             </div>
           </div>
+          <p class="h5">Representative</p>
           <div class="form-group">
+            <label for="first-name">First name</label>
             <input
               type="text"
               class="form-control"
-              id="skills"
-              placeholder="Add skills"
+              id="first-name"
             />
           </div>
           <div class="form-group">
+            <label for="last-name">Last name</label>
             <input
               type="text"
               class="form-control"
-              id="education"
-              placeholder="Add education"
+              id="last-name"
             />
           </div>
           <div class="form-group">
+            <label for="role">Business role</label>
             <input
               type="text"
               class="form-control"
-              id="work-experience"
-              placeholder="Add work experience"
-            />
-          </div>
-          <div class="form-group">
-            <input
-              type="text"
-              class="form-control"
-              id="courses"
-              placeholder="Add courses"
+              id="role"
             />
           </div>
           <div class="row">
@@ -67,7 +60,7 @@
               <button type="button" class="btn background-purple btn-block">Back</button>
             </div>
             <div class="col">
-              <button type="submit" class="btn background-purple btn-block">View profile</button>
+              <button type="submit" class="btn background-purple btn-block">Next</button>
             </div>
           </div>
         </form>
