--- a/filter-search.html
+++ b/filter-search.html
@@ -53,7 +53,7 @@
               />
             </div>
           </div>
-          <div class="form-control">Oslo</div>
+          <div class="form-control">Bergen</div>
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
@@ -65,7 +65,7 @@
               />
             </div>
           </div>
-          <div class="form-control">Oslo</div>
+          <div class="form-control">Stavanger</div>
         </div>
         <p>Profession</p>
         <div class="input-group mb-3">
@@ -78,7 +78,7 @@
               />
             </div>
           </div>
-          <div class="form-control">Oslo</div>
+          <div class="form-control">Frontend Developer</div>
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
@@ -90,7 +90,7 @@
               />
             </div>
           </div>
-          <div class="form-control">Oslo</div>
+          <div class="form-control">Backend Developer</div>
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
@@ -102,7 +102,7 @@
               />
             </div>
           </div>
-          <div class="form-control">Oslo</div>
+          <div class="form-control">Fullstack Developer</div>
         </div>
         <p>Skills</p>
         <div class="input-group mb-3">
@@ -115,7 +115,7 @@
               />
             </div>
           </div>
-          <div class="form-control">Oslo</div>
+          <div class="form-control">HTML</div>
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
@@ -127,7 +127,7 @@
               />
             </div>
           </div>
-          <div class="form-control">Oslo</div>
+          <div class="form-control">CSS</div>
         </div>
         <div class="input-group mb-3">
           <div class="input-group-prepend">
@@ -139,7 +139,7 @@
               />
             </div>
           </div>
-          <div class="form-control">Oslo</div>
+          <div class="form-control">JavaScript</div>
         </div>
         <button
           type="button"
