finished person profile

--- a/myprofile-person.html
+++ b/myprofile-person.html
@@ -20,12 +20,12 @@
     <div class="container">
         <div class="heading-container">
             <h1 class="heading-1">My profile</h1>
-        <header class="profile-header">
-            <img class="avatar  avatar-space" src="https://thispersondoesnotexist.com/image" alt="Picture">
-            <div class="profile-header-titles">
-                <p class="profile-name">Name Nameson</p>
-                <p class="profile-title">Frontend Developer</p>
-            </div>
+            <header class="profile-header">
+                <img class="avatar  avatar-space" src="https://thispersondoesnotexist.com/image" alt="Picture">
+                <div class="profile-header-titles">
+                    <p class="profile-name">Name Nameson</p>
+                    <p class="profile-title">Frontend Developer</p>
+                </div>
         </div>
         </header>
         <section>
@@ -35,8 +35,38 @@
                 <div class="skill">CSS</div>
                 <div class="skill">Javascript</div>
             </div>
-            <a href="">Edit profile<i data-eva="arrow-forward-outline"></i></a>
+            <a href="" class="profile-btn">
+                <p class="profile-btn-text">Edit skills</p>
+                <i data-eva="arrow-forward-outline"></i>
+            </a>
         </section>
+        <section>
+            <h2 class="h2">My education</h2>
+            <div class="skills">
+                <div class="profile-info">
+                    <p class="profile-info-year">2015-2018</p>
+                    <p class="profile-info-place">Noroff Bergen</p>
+                </div>
+            </div>
+            <a class="profile-btn">
+                <p class="profile-btn-text">Edit education</p>
+                <i data-eva="arrow-forward-outline"></i>
+            </a>
+        </section>
+        <section>
+            <h2 class="h2">My work experience</h2>
+            <div class="skills">
+                <div class="profile-info">
+                    <p class="profile-info-year">2019-</p>
+                    <p class="profile-info-place">Hack Corp.</p>
+                </div>
+            </div>
+            <a class="profile-btn">
+                <p class="profile-btn-text">Edit work experience</p>
+                <i data-eva="arrow-forward-outline"></i>
+            </a>
+        </section>
+
     </div>
 </body>
 <script>
