fixed navigation links

--- a/register-business-1.html
+++ b/register-business-1.html
@@ -46,14 +46,19 @@
           </div>
           <div class="form-group">
             <label for="number-of-employees">Number of employees</label>
-            <input type="number" class="form-control" id="number-of-employees" />
+            <input
+              type="number"
+              class="form-control"
+              id="number-of-employees"
+            />
           </div>
           <div class="form-group">
             <label for="location">Location</label>
-            <input type="text" class="form-control" id="location">
+            <input type="text" class="form-control" id="location" />
           </div>
-          
-          <button type="submit" class="btn background-purple">Next</button>
+          <a href="register-business-2.html">
+            <button type="button" class="btn background-purple">Next</button>
+          </a>
         </form>
       </section>
     </div>
