--- a/register-business-2.html
+++ b/register-business-2.html
@@ -26,41 +26,39 @@
             <div class="form-group col-8 center-wrapper">
               <div class="center-vertically">
                 <p class="h6">Business name</p>
-                <p class="h6"> <i data-eva="paper-plane" data-eva-fill="#444444"></i> Oslo</p>
+                <p class="h6">
+                  <i data-eva="paper-plane" data-eva-fill="#444444"></i> Oslo
+                </p>
               </div>
             </div>
           </div>
           <p class="h5">Representative</p>
           <div class="form-group">
             <label for="first-name">First name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="first-name"
-            />
+            <input type="text" class="form-control" id="first-name" />
           </div>
           <div class="form-group">
             <label for="last-name">Last name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="last-name"
-            />
+            <input type="text" class="form-control" id="last-name" />
           </div>
           <div class="form-group">
             <label for="role">Business role</label>
-            <input
-              type="text"
-              class="form-control"
-              id="role"
-            />
+            <input type="text" class="form-control" id="role" />
           </div>
           <div class="row">
             <div class="col">
-              <button type="button" class="btn background-purple btn-block">Back</button>
+              <a href="register-business-1.html">
+                <button type="button" class="btn background-purple btn-block">
+                  Back
+                </button>
+              </a>
             </div>
             <div class="col">
-              <button type="submit" class="btn background-purple btn-block">Next</button>
+              <a href="register-business-3.html">
+                <button type="button" class="btn background-purple btn-block">
+                  Next
+                </button>
+              </a>
             </div>
           </div>
         </form>
