--- a/register-business-3.html
+++ b/register-business-3.html
@@ -27,7 +27,9 @@
               <div class="center-vertically">
                 <p class="h5">Name Nameson</p>
                 <p class="h6">Business name</p>
-                <p class="h6"> <i data-eva="paper-plane" data-eva-fill="#444444"></i> Oslo</p>
+                <p class="h6">
+                  <i data-eva="paper-plane" data-eva-fill="#444444"></i> Oslo
+                </p>
               </div>
             </div>
           </div>
