--- a/register-person-1.html
+++ b/register-person-1.html
@@ -82,7 +82,9 @@
             <label for="employer">Latest employer</label>
             <input type="text" class="form-control" id="employer" />
           </div>
-          <button type="submit" class="btn background-purple">Next</button>
+          <a href="register-person-2.html">
+            <button type="button" class="btn background-purple">Next</button>
+          </a>
         </form>
       </section>
     </div>
