--- a/register-person-2.html
+++ b/register-person-2.html
@@ -64,10 +64,18 @@
           </div>
           <div class="row">
             <div class="col">
-              <button type="button" class="btn background-purple btn-block">Back</button>
+              <a href="register-person-1.html">
+                <button type="button" class="btn background-purple btn-block">
+                  Back
+                </button>
+              </a>
             </div>
             <div class="col">
-              <button type="submit" class="btn background-purple btn-block">View profile</button>
+              <a href="">
+                <button type="button" class="btn background-purple btn-block">
+                  View profile
+                </button>
+              </a>
             </div>
           </div>
         </form>
