--- a/register.html
+++ b/register.html
@@ -9,7 +9,7 @@
   </head>
   <body class="register">
     <div class="container text-center">
-      <h1>Register or Log in</h1>
+      <h1>Register</h1>
       <section class="center-totally">
         <div>
           <i
@@ -18,7 +18,11 @@
             data-eva-height="60px"
             data-eva-width="60px"
           ></i>
-          <button type="button" class="btn background-purple">Person</button>
+          <a href="register-person-1.html">
+            <button type="button" class="btn background-purple">
+              Personal
+            </button>
+          </a>
         </div>
         <div>
           <i
@@ -27,11 +31,12 @@
             data-eva-height="60px"
             data-eva-width="60px"
           ></i>
-          <button type="button" class="btn border-purple">Business</button>
+          <a href="register-business-1.html">
+            <button type="button" class="btn border-purple">Business</button>
+          </a>
         </div>
       </section>
     </div>
-
     <script>
       eva.replace();
     </script>
