--- a/contract.html
+++ b/contract.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#"><i data-eva="arrow-back-outline"></i></a>
-      <a class="navbar-brand" href="#"><i data-eva="funnel-outline"></i></a>
+      <div class="navbar-brand"></div>
     </nav>
     <div class="container"></div>
   </body>
