fixed login and css

--- a/intropage3.html
+++ b/intropage3.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="scss/style.scss">
     <script defer src="js/app.js"></script>
     <link rel="stylesheet" href="css/intropage.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <div class="intro">
         <a class="btn btn-right" href="">Skip</a>
         <h1 class="intro-h1 intro-h1-small">Agree on employment</h1>
-        <div class="opacity-bgr">
+        <div class="opacity-bgr opacity-bgr-long">
             <p class="intro-text">Upload and sign the contract within the app</p>
         </div>
     </div>
