--- a/login-business.html
+++ b/login-business.html
@@ -8,6 +8,7 @@
     <script defer src="js/app.js"></script>
     <script src="https://unpkg.com/eva-icons"></script>
     <link rel="stylesheet" href="css/intropage.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <nav class="navbar navbar-light bg-light">
