--- a/login-personal.html
+++ b/login-personal.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="scss/style.scss" />
     <script defer src="js/login.js"></script>
     <script src="https://unpkg.com/eva-icons"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/intropage.css">
   </head>
   <body>
