--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>Cute Hack 2020</title>
     <link rel="stylesheet" href="scss/style.scss" />
     <link rel="stylesheet" href="css/intropage.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <script defer src="js/app.js"></script>
     <script src="https://unpkg.com/eva-icons"></script>
   </head>
