--- a/intropage2.html
+++ b/intropage2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="scss/style.scss">
     <script defer src="js/app.js"></script>
     <link rel="stylesheet" href="css/intropage.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
