--- a/register-business-1.html
+++ b/register-business-1.html
@@ -56,9 +56,22 @@
             <label for="location">Location</label>
             <input type="text" class="form-control" id="location" />
           </div>
-          <a href="register-business-2.html">
-            <button type="button" class="btn background-purple">Next</button>
-          </a>
+          <div class="row">
+            <div class="col">
+              <a href="register.html">
+                <button type="button" class="btn background-purple">
+                  Back
+                </button>
+              </a>
+            </div>
+            <div class="col">
+              <a href="register-business-2.html">
+                <button type="button" class="btn background-purple">
+                  Next
+                </button>
+              </a>
+            </div>
+          </div>
         </form>
       </section>
     </div>
