--- a/register-business-3.html
+++ b/register-business-3.html
@@ -39,6 +39,22 @@
           </div>
         </form>
       </section>
+      <div class="row">
+        <div class="col">
+          <a href="register-business-2.html">
+            <button type="button" class="btn background-purple btn-block">
+              Back
+            </button>
+          </a>
+        </div>
+        <div class="col">
+          <a href="myprofile-business.html">
+            <button type="button" class="btn background-purple btn-block">
+              View profile
+            </button>
+          </a>
+        </div>
+      </div>
     </div>
 
     <script>
