--- a/register-person-1.html
+++ b/register-person-1.html
@@ -82,9 +82,22 @@
             <label for="employer">Latest employer</label>
             <input type="text" class="form-control" id="employer" />
           </div>
-          <a href="register-person-2.html">
-            <button type="button" class="btn background-purple">Next</button>
-          </a>
+          <div class="row">
+            <div class="col">
+              <a href="register.html">
+                <button type="button" class="btn background-purple">
+                  Back
+                </button>
+              </a>
+            </div>
+            <div class="col">
+              <a href="register-person-2.html">
+                <button type="button" class="btn background-purple">
+                  Next
+                </button>
+              </a>
+            </div>
+          </div>
         </form>
       </section>
     </div>
