--- a/register-person-2.html
+++ b/register-person-2.html
@@ -71,7 +71,7 @@
               </a>
             </div>
             <div class="col">
-              <a href="">
+              <a href="myprofile-person.html">
                 <button type="button" class="btn background-purple btn-block">
                   View profile
                 </button>
