finished contract page

--- a/contract.html
+++ b/contract.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filter Search</title>
+    <title>Contract</title>
     <link rel="stylesheet" href="scss/style.scss" />
     <script defer src="js/app.js"></script>
     <script src="https://unpkg.com/eva-icons"></script>
@@ -13,7 +13,29 @@
       <a class="navbar-brand" href="#"><i data-eva="arrow-back-outline"></i></a>
       <div class="navbar-brand"></div>
     </nav>
-    <div class="container"></div>
+    <div class="container">
+      <div class="contract-div">
+        <h1 class="contract-heading">Contract</h1>
+        <p class="paragraph paragraph--2">
+          1.1 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
+        <p class="paragraph paragraph--1">
+          2.1 Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+          id est laborum.
+        </p>
+      </div>
+      <button
+        type="button"
+        class="buttons search-btn btn btn-primary btn-lg btn-block"
+      >
+        Sign contract
+      </button>
+    </div>
   </body>
   <script>
     eva.replace();
