added bsn profile edit and jobad

--- a/login-personal.html
+++ b/login-personal.html
@@ -36,13 +36,13 @@
           <input type="password" class="form-control form-input" id="loginFormPassword" />
         </div>
         <button type="submit" class="buttons btn btn-primary btn-lg btn-block">
-          Login
+          <a href="./myprofile-person.html">Login</a>
         </button>
         <button
           type="button"
           class="buttons btn btn-secondary btn-lg btn-block btn-solid"
         >
-          Register
+        <a class="link-white" href="./register-person-1.html">Register</a>
         </button>
       </form>
     </div>
