--- a/myprofile-business.html
+++ b/myprofile-business.html
@@ -31,7 +31,7 @@
         <section class="section-nomargin-bottom">
             <h2 class="h2">About</h2>
             <p class="profile-about-text">Come work for us at Hack Corp. if you want a fun work-place</p>
-            <a href="" class="profile-btn profile-btn-nomargin">
+            <a href="./profile-business-edit.html" class="profile-btn profile-btn-nomargin">
                 <p class="profile-btn-text">Edit profile</p>
                 <i data-eva="arrow-forward-outline"></i>
             </a>
