--- a/myprofile-person.html
+++ b/myprofile-person.html
@@ -28,6 +28,10 @@
                 </div>
         </div>
         </header>
+        <a href="" class="profile-btn">
+            <p class="profile-btn-text">Edit skills</p>
+            <i data-eva="arrow-forward-outline"></i>
+        </a>
         <section>
             <h2 class="h2">My skills</h2>
             <div class="skills">
