--- a/intropage.html
+++ b/intropage.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="intro">
-        <a class="btn btn-right" href="">Skip</a>
+        <a href="login.html" class="btn btn-right" href="">Skip</a>
         <h1 class="intro-h1">Sign up</h1>
         <div class="opacity-bgr opacity-bgr-long">
             <p class="intro-text">Start by signing up as either job seeker or business and complete your profile in a matter of minutes</p>
