--- a/intropage2.html
+++ b/intropage2.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="intro">
-        <a class="btn btn-right" href="">Skip</a>
+        <a href="login.html" class="btn btn-right" href="">Skip</a>
         <h1 class="intro-h1 intro-h1-small">Meet a match</h1>
         <div class="opacity-bgr opacity-bgr-long">
             <p class="intro-text">Swipe right and left until you find a job or job seeker that matches your search, and get to know each other using the chat or video call</p>
