--- a/intropage3.html
+++ b/intropage3.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="intro">
-        <a class="btn btn-right" href="">Skip</a>
+        <a href="login.html" class="btn btn-right" href="">Skip</a>
         <h1 class="intro-h1 intro-h1-small">Agree on employment</h1>
         <div class="opacity-bgr opacity-bgr-long">
             <p class="intro-text">Upload and sign the contract within the app</p>
