--- a/myprofile-business.html
+++ b/myprofile-business.html
@@ -37,7 +37,7 @@
             </a>
         </section>
         <section class="section-nomargin-top">
-            <a class="profile-btn profile-btn-solid">
+            <a href="./profile-business-jobad.html" class="profile-btn profile-btn-solid">
                 <p class="profile-btn-text profile-btn-text-solid">Create job-advertisement</p>
                 <i class="profile-btn-icon" data-eva="arrow-forward-outline"></i>
             </a>
